@@ -1,4 +1,4 @@
-eid,sig,eps
+eid,sig_PGA,eps_PGA
 9818295238656,2.929488E-01,1.021841E+00
 11098195492864,3.336481E-01,1.102556E+00
 14066017894400,3.136589E-01,1.182088E+00
